rust/transpiler/tests/errors/unclosed_with.hyper
with open("file.txt") as f:
    <pre>{f.read()}</pre>
